@@ -32,6 +32,7 @@
   * Mechanize now uses net-http-digest_auth.  GH #31
   * Mechanize now implements session cookies.  GH #78
   * Mechanize now implements deflate decoding.  GH #40
+  * Mechanize now allows a certificate and key to be passed directly.  GH #71
 
 * Bug Fixes:
 
